
* Code generation: non-overloaded function specifications for a class
parameter are now permitted and effectively turn this class parameter
into an ordinary function in generated code; this allows to dissociate a
class parameter from its origin class in generated code. It is still
possible to specify code equations for instances of that class
parameter.


*** Isabelle/jEdit Prover IDE ***

* Support for additional look-and-feels: "FlatLaf IntelliJ" and "FlatLaf
Darcula".

* The FlatLaf look-and-feel has been patched slightly, to recover the
regular Java/Swing behavior of the F10 key on all platforms, notably
Windows. F10 should focus the menu bar and open the first menu, which
can be reversed via the ESCAPE. Consequently, the NVDA Screen Reader
will display the menu title on the Braille display properly ---
otherwise no action was indicated. Minor INCOMPATIBILITY with native
Windows GUI behavior of F10, which FlatLaf attempted to imitate here.

* The jEdit actions "isabelle.reload-plain" and
"isabelle.reload-symbols" provide convenient shortcuts to reload a
buffer with the encodings "UTF-8" and "UTF-8-Isabelle", respectively.
These actions also appear as menu items "File / Reload Plain Text" and
"File / Reload Unicode Symbols". This helps to see the true text behind
the superficial Unicode rendering, which is usually enabled by default.

* The jEdit action "goto-entity" has been superseded by "follow-link",
while retaining the keyboard shortcut CS+d. The new action is more
general: it uses the same notion of link as C-hover-click via mouse.
Minor INCOMPATIBILITY.

* Tooltip messages render formal entities with additional PIDE markup,
to distinguish multiple def-positions due to locale interpretations etc.

* Console/Scala: more robust Scala_Console.Progress with local output
and interrupt handling (using thread interrupt, e.g. via "Stop" button).
For example:

  val progress = new Scala_Console.Progress(verbose = true)